[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/SpaceMashGame/SpaceMashGame.gd" type="Script" id=1]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_northamercia_inactive.png" type="Texture" id=2]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_africa_inactive.png" type="Texture" id=3]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_africa_active.png" type="Texture" id=4]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_australia_active.png" type="Texture" id=5]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_antartica_inactive.png" type="Texture" id=6]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_fail.png" type="Texture" id=7]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_asia_active.png" type="Texture" id=8]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_success.png" type="Texture" id=9]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_australia_inactive.png" type="Texture" id=10]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_northamercia_active.png" type="Texture" id=11]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_southamerica_active.png" type="Texture" id=12]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_europe_active.png" type="Texture" id=13]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_antartica_active.png" type="Texture" id=14]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_asia_inactive.png" type="Texture" id=15]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_europe_inactive.png" type="Texture" id=16]
[ext_resource path="res://src/res/Window/Space/windowbutton_space_continent_southamerica_inactive.png" type="Texture" id=17]
[ext_resource path="res://src/res/Window/Space/window_space.png" type="Texture" id=18]
[ext_resource path="res://src/res/Window/Space/window_space_gauge.png" type="Texture" id=19]
[ext_resource path="res://src/res/Fonts/72/GOTHICI-72.tres" type="DynamicFont" id=20]
[ext_resource path="res://src/res/Window/Space/window_space_gauge_full.png" type="Texture" id=21]
[ext_resource path="res://src/res/windowbuttonsubmit.png" type="Texture" id=22]
[ext_resource path="res://src/res/windowbuttonsubmitdark.png" type="Texture" id=23]

[sub_resource type="InputEventKey" id=1]
pressed = true
scancode = 32

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="SpaceMashGame" type="Control"]
margin_right = 1221.0
margin_bottom = 818.0
rect_scale = Vector2( 1.04796, 0.874842 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -546.0
margin_top = -408.0
margin_right = 546.0
margin_bottom = 408.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 546, 408 )
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countries" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -474.0
margin_top = -122.234
margin_right = 474.0
margin_bottom = -97.2341
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 474, 12 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAfrica" type="TextureButton" parent="Countries"]
margin_right = 132.0
margin_bottom = 25.0
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAsia" type="TextureButton" parent="Countries"]
margin_left = 136.0
margin_right = 268.0
margin_bottom = 25.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEurope" type="TextureButton" parent="Countries"]
margin_left = 272.0
margin_right = 404.0
margin_bottom = 25.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNorthAmerica" type="TextureButton" parent="Countries"]
margin_left = 408.0
margin_right = 540.0
margin_bottom = 25.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSouthAmerica" type="TextureButton" parent="Countries"]
margin_left = 544.0
margin_right = 676.0
margin_bottom = 25.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAntartica" type="TextureButton" parent="Countries"]
margin_left = 680.0
margin_right = 812.0
margin_bottom = 25.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAustralia" type="TextureButton" parent="Countries"]
margin_left = 816.0
margin_right = 948.0
margin_bottom = 25.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerLevel" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.5
margin_top = -176.5
margin_right = 176.5
margin_bottom = 176.5
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 176, 176 )
value = 45.0
rounded = true
texture_under = ExtResource( 19 )
texture_progress = ExtResource( 21 )
fill_mode = 4
radial_initial_angle = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerPercentage" type="Label" parent="PowerLevel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -44.5
margin_right = 68.0
margin_bottom = 44.5
rect_pivot_offset = Vector2( 68, 45 )
custom_fonts/font = ExtResource( 20 )
text = "45%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDivertPower" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -181.501
margin_top = -323.255
margin_right = 181.5
margin_bottom = -252.255
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 181.5, 35 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSubmit" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -185.039
margin_top = -272.799
margin_right = 179.961
margin_bottom = -201.799
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 181.5, 35 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="Countries/ButtonAfrica" to="." method="_on_ButtonAfrica_toggled"]
[connection signal="toggled" from="Countries/ButtonAsia" to="." method="_on_ButtonAsia_toggled"]
[connection signal="toggled" from="Countries/ButtonEurope" to="." method="_on_ButtonEurope_toggled"]
[connection signal="toggled" from="Countries/ButtonNorthAmerica" to="." method="_on_ButtonNorthAmerica_toggled"]
[connection signal="toggled" from="Countries/ButtonSouthAmerica" to="." method="_on_ButtonSouthAmerica_toggled"]
[connection signal="toggled" from="Countries/ButtonAntartica" to="." method="_on_ButtonAntartica_toggled"]
[connection signal="toggled" from="Countries/ButtonAustralia" to="." method="_on_ButtonAustralia_toggled"]
[connection signal="pressed" from="ButtonDivertPower" to="." method="_on_ButtonDivertPower_pressed"]
[connection signal="pressed" from="ButtonSubmit" to="." method="_on_ButtonSubmit_pressed"]
